Thu Jun 22 16:06:26 1995  Tom Yu  (tlyu@dragons-lair)

	* krb4-proto.h, krb.h: reverse sense of KRB5_PROVIDE_PROTOTYPES
		(-> KRB5_NO_PROTOTYPES)

Fri Jun  9 18:40:51 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Fri Jun  9 15:51:45 1995  Theodore Y. Ts'o  <tytso@lurch.mit.edu>

	* kdc.h: Don't define the macros for max and min; they're already
		defined in kdc_util.h.

Thu Jun  8 11:22:23 1995  Theodore Y. Ts'o  <tytso@lurch.mit.edu>

	* Makefile.in (install): Don't install the install/kerberosIV
		header files.

Tue Jun  6 21:16:39 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* krb4-proto.h: decomp_ticket change the time field to unsigned
		KRB4_32 to match the Cygnus krb4 library.

Tue Jun  6 12:30:41 1995  Theodore Y. Ts'o  (tytso@dcl)

	* krb4-proto.h: Rename save_credentials to krb_save_credentials,
		to match the Cygnus krb4 library.

Tue May 23 22:08:05 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* krb4-proto.h: klog prototype did not match source.

Sun May  7 08:26:21 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* kparse.h: Remove ErrorMsg definition. It is declared static in
		source file.

	* krb4-proto.h: krb_rd_priv prototype did not match source

Fri Apr 28 16:39:47 1995  Mark Eichin  <eichin@cygnus.com>

	* kparse.h (strutol, strsave): are only static in this module.

Fri Apr 28 15:05:23 1995  Mark Eichin  <eichin@cygnus.com>

	* krb4-proto.h: #if 0, not #ifdef 0.

Fri Apr 28 14:56:39 1995  Theodore Y. Ts'o  <tytso@dcl>

	* lsb_addr_cmp.h: Don't try to include osconf.h

Fri Apr 28 08:24:23 1995  Theodore Y. Ts'o  <tytso@lurch.mit.edu>

	* conf.h, conf-*.h: Removed.  We don't need them anymore,
		we're using autoconf!  (And things like MSBFIRST AND
		LSBFIRST aren't needed anyway, since the CNS V4
		library figures this all out dynamically anyway.)

	* krb4-proto.h: Don't define the functions found in getenv.o or